Adding the identity persistence main classes.

--- a/RenoCare.Api/RenoCare.Api.csproj
+++ b/RenoCare.Api/RenoCare.Api.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RenoCare.Persistence\RenoCare.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
