--- a/RenoCare.Api/appsettings.json
+++ b/RenoCare.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnectionString": "Data Source=DESKTOP-KIA90SC;Initial Catalog=RenoCare;Integrated Security=True;Persist Security Info=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
