Build the authentication and token servic provider with their configurations.

--- a/RenoCare.Api/RenoCare.Api.csproj
+++ b/RenoCare.Api/RenoCare.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RenoCare.Infrastructure\RenoCare.Infrastructure.csproj" />
     <ProjectReference Include="..\RenoCare.Persistence\RenoCare.Persistence.csproj" />
   </ItemGroup>
 
