--- a/RenoCare.Core/RenoCare.Core.csproj
+++ b/RenoCare.Core/RenoCare.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RenoCare.Domain\RenoCare.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
