Add fluent email and implementing email sender with Html template.

--- a/RenoCare.Api/appsettings.json
+++ b/RenoCare.Api/appsettings.json
@@ -9,5 +9,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpCredintials": {
+      "Username": "mocaneva2@gmail.com",
+      "Password": "cqfpyzdzvssazyxx"
+    }
+  },
   "AllowedHosts": "*"
 }
