building bases for database connection (DContext, Repository) and creating patients table

--- a/RenoCare.Api/appsettings.json
+++ b/RenoCare.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityConnectionString": "Data Source=DESKTOP-KIA90SC;Initial Catalog=RenoCare;Integrated Security=True;Persist Security Info=False"
+    "DefaultConnectionString": "Data Source=DESKTOP-KIA90SC;Initial Catalog=RenoCare;Integrated Security=True;Persist Security Info=False"
   },
   "Logging": {
     "LogLevel": {
