--- a/RenoCare.Core/RenoCare.Core.csproj
+++ b/RenoCare.Core/RenoCare.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.11" />
   </ItemGroup>
 
 </Project>
