--- a/RenoCare.Core/RenoCare.Core.csproj
+++ b/RenoCare.Core/RenoCare.Core.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\MedicationRequests\DTOs\" />
+  </ItemGroup>
+
 </Project>
