--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,7 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  get_it: ^7.6.4
+  http: ^1.2.1
+  easy_search_bar: ^2.5.0
+  google_fonts: ^6.2.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
