--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.19.0
   get_it: ^7.6.4
   http: ^1.2.1
   easy_search_bar: ^2.5.0
@@ -42,6 +43,10 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
   dio: ^5.4.3+1
+  google_maps_flutter: ^2.6.1
+
+  lottie: ^3.1.2
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +76,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
