--- a/RenoCare.Api/Properties/launchSettings.json
+++ b/RenoCare.Api/Properties/launchSettings.json
@@ -19,10 +19,9 @@
     },
     "RenoCare.Api": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://ocalhost:5001;http://ocalhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
