--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
 
   shared_preferences: ^2.2.3
   logging: ^1.2.0
+  google_fonts: ^6.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
