--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
   get_it: ^7.6.4
-#  http: ^1.2.1
+  #  http: ^1.2.1
   easy_search_bar: ^2.5.0
- #google_fonts: ^6.2.0
+  google_fonts: ^4.0.4
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
   dio: ^5.4.3+1
@@ -57,7 +57,20 @@ dependencies:
 
   shared_preferences: ^2.2.3
   logging: ^1.2.0
-  google_fonts: ^6.2.1
+
+  chat_bubbles: ^1.6.0
+  url_launcher: ^6.3.0
+  flutter_downloader: ^1.11.7
+  permission_handler: ^8.2.0
+  path_provider: ^2.0.2
+
+  carousel_slider: ^4.2.1
+  group_button: ^5.3.4
+
+  smooth_page_indicator: ^1.1.0
+  font_awesome_flutter: ^10.4.0
+  readmore: ^2.2.0
+  table_calendar: ^3.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
