--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   readmore: ^2.2.0
   table_calendar: ^3.0.9
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
