--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -73,8 +73,11 @@ dependencies:
   readmore: ^2.2.0
   table_calendar: ^3.0.9
   flutter_rating_bar: ^4.0.1
-
+  flutter_local_notifications: ^17.2.1
   flutter_xlider: ^3.5.0
+  loading_animation_widget: ^1.2.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
