--- a/RenoCare.Api/RenoCare.Api.csproj
+++ b/RenoCare.Api/RenoCare.Api.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Templetes\**" />
+    <Content Remove="wwwroot\Templetes\**" />
+    <EmbeddedResource Remove="wwwroot\Templetes\**" />
+    <None Remove="wwwroot\Templetes\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Views\Templates\Report\logo.png" />
+    <Content Include="Views\Templates\Report\style.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.17">
