--- a/RenoCare.Core/RenoCare.Core.csproj
+++ b/RenoCare.Core/RenoCare.Core.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="5.0.17" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.11" />
+    <PackageReference Include="System.Runtime" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
