update notification , and profile page

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -76,8 +76,13 @@ dependencies:
   flutter_local_notifications: ^17.2.1
   flutter_xlider: ^3.5.0
   loading_animation_widget: ^1.2.1
+  flutter_launcher_icons: ^0.13.1
 
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon/appIcon2.jpeg"
 dev_dependencies:
   flutter_test:
     sdk: flutter
