--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -77,12 +77,12 @@ dependencies:
   flutter_xlider: ^3.5.0
   loading_animation_widget: ^1.2.1
   awesome_dialog: ^3.2.1
-
+  video_player: ^2.9.1
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/app_icon/appIcon2.jpeg"
+  image_path: "assets/app_icon/app_image.png"
 dev_dependencies:
   flutter_test:
     sdk: flutter
